Minor changes: Fixed hover z-index and quicklink overlay

--- a/components/top-nav/src/top-nav-hover.module.scss
+++ b/components/top-nav/src/top-nav-hover.module.scss
@@ -2,7 +2,7 @@
 
 .hover-item {
   position: fixed;
-  z-index: 1;
+  z-index: 6;
   padding: size('8x') size('6x');
   background-color: color('white');
   box-shadow: shadow('topnav-hover');
@@ -63,7 +63,7 @@
       text-align: left;
       background-color: transparent;
       border: 0;
-      
+
       &:hover {
         background-color: color('primary-base-light');
         @include border-radius('button');
